data/derived/comb/progs/unify/prog7293.ml.out
Characters 44-53:
  let f a x = let a::x = x in [(a * a)] + sqsum [x] in
                              ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
